Modify tut02 and  added tut03

--- a/01_Title_Heading_Paragraph.html
+++ b/01_Title_Heading_Paragraph.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This is a sample HTML document.">   <!-- brief description of the page for search engines and browsers -->
     <meta name="keywords" content="python, html, html tutorial, web development">   <!-- relevant keywords for search engines -->
     <meta name="robots" content="index, follow">   <!-- instructions for search engine crawlers how to treat your page -->
-    <title>Ankit's HTML</title>
+    <title>01_Title_Heading_Paragraph</title>
 
     <!-- include external css file -->
     <link rel="stylesheet" href="harry.css">
