--- a/02_Img_AnchorTags.html
+++ b/02_Img_AnchorTags.html
@@ -3,17 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>02_Img_AnchorTags</title>
 </head>
 <body>
     
-    <a href="https://google.com">Go To Google</a>
+    <a href="https://google.com" target="_blank">Go To Google</a>  
+
+    <br>  <!-- target="_blank" -> Opens the linked document in a new window or tab. -->
+
+    <a href="https://facebook.com" target="_blank">Go To Facebook</a>
     <br>
-    <a href="https://facebook.com">Go To Facebook</a>
+    <a href="https://twitter.com" target="_blank">Go To Twitter</a>
     <br>
-    <a href="https://twitter.com">Go To Twitter</a>
+    <a href="https://linkedin.com" target="_blank">Go To Linkedin</a>
+
+    <!-- linking internal pages -->
     <br>
-    <a href="https://linkedin.com">Go To Linkedin</a>
+    <a href="01_Title_Heading_Paragraph.html" target="_blank">Tutorial 01</a>
+
+
+    <!-- inset image -->
+    <img src="ankit.jpg" alt="Error Loading Image"><br>
+    <img src="https://picsum.photos/500/200?random" alt="Can't Find Image">
+<!-- https://picsum.photos/900/700?random -> this link adds random images on every loading  -->
+
+ <!-- **** ### we can add 'width ' and 'height' attribute to set the size of image. But it's not a good practice to set size using these attributes. We should use CSS for that. ### **** -->
+
 
 </body>
 </html>
