--- a/06_Ids_&_Classes.html
+++ b/06_Ids_&_Classes.html
@@ -13,5 +13,14 @@
     <div id="uniqueDiv" class="redBg" style="border: 2px solid green; padding: 10px;">
         This div has a unique ID.
 
+    <!-- Creating multiple elements using Emmet  -->
+     <!-- span.myClass.myClass2.myClass3 + (Tab) -->
+     <span class="myClass myClass2 myClass3">First</span>
+     <span class="myClass myClass2 myClass3">Second</span>
+     <span class="myClass myClass2 myClass3">Third</span>
+     <span class="myClass myClass2 myClass3">Fourth</span>
+
+     <!-- id should be for one elem. Class can be for different elements -->
+
 </body>
 </html>
